tests/error/tested.default
build:
run: LLVM_PROFILE_FILE="profile/tests/%%p.profraw" ./build/$BUILD/bin/rodac % --messages=minimal
cleanup: 

exit: != 0
stderr: !=
